--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
             <h2>Iniciar Sesión</h2>
             <form id="loginForm">
                 <div class="input-group">
-                    <label for="username">Usuario:</label>
+                    <label for="username">Código del estudiante:</label>
                     <input type="text" id="username" name="username" required>
                 </div>
                 <div class="input-group">
                     <label for="password">Contraseña:</label>
                     <input type="password" id="password" name="password" required>
                 </div>
-                <button type="submit">Iniciar Sesión</button>
+                <button type="submit">Ingresar</button>
             </form>
         </div>
     </div>
