--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <label>Julián Andrés Hernández Ortega - 1152302</label>
         <div class="logo">
-            <img src="imagenes/showdown.png" alt="Logo">
+            <img src="ufps.jpg" alt="Logo">
         </div>
         <div class="login-form">
             <h2>Iniciar Sesión</h2>
