--- a/main.html
+++ b/main.html
@@ -37,6 +37,9 @@
                    
                 </tbody>
             </table>
+
+            <div id="promedioPonderado"></div>
+
         </div>
     </div>
     <script src="js/main.js" defer></script>
