--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <header>
         <div class="logo-container">
             <div class="logo">
-                <img src="ufps.jpg" alt="Logo">
+                <img src="img/ufps.jpg" alt="Logo">
             </div>
         </div>
     </header>
